week02/styles/media-query.css
body {
    font-family: 'Roboto', sans-serif;
     
}

header,
main,
footer {
    max-width: 640 px;
    margin: 1rem auto;
    padding: 1.5rem;
    border: 1px solid rgb(84, 84, 147);
    background-color: rgb(196, 196, 230);
    border-radius: 4px;
    text-align: center;
   

}

main {
    display: grid;
    grid-template-columns: 1fr;
    grid-gap: 1rem;

}

section {
    padding: 1.5 rem;
    background-color: rgb(220, 220, 234);


}

